table part complete

--- a/Week-1/Assignment2/styles.css
+++ b/Week-1/Assignment2/styles.css
@@ -12,7 +12,7 @@ navbar {
   background-color: #f0f0f0;
   color: #000;
   width: 2.5rem;
-  height: 100vh;
+  height: 80vh;
   font-size: 2rem;
   display: flex;
   align-items: center;
@@ -49,4 +49,28 @@ nav {
   height: 5rem;
   width: 5rem;
   color: #fff;
+}
+
+table {
+  position: absolute;
+  top: 40%;
+  left: 10%;
+  border-collapse: collapse;
+  width: 100%;
+  color: #000;
+}
+
+th,
+td {
+  text-align: left;
+  padding: 15px;
+}
+
+tr:nth-child(even) {
+  background-color: #e1e0e0;
+}
+
+td:nth-child(4) span{
+  border: 2px solid #000;
+  color: blue;
 }
