--- a/Week-1/Assignment2/styles.css
+++ b/Week-1/Assignment2/styles.css
@@ -12,7 +12,7 @@ navbar {
   background-color: #f0f0f0;
   color: #000;
   width: 2.5rem;
-  height: 80vh;
+  height: 75vh;
   font-size: 2rem;
   display: flex;
   align-items: center;
@@ -70,7 +70,31 @@ tr:nth-child(even) {
   background-color: #e1e0e0;
 }
 
-td:nth-child(4) span{
+td:nth-child(4) span {
   border: 2px solid #000;
   color: blue;
+}
+
+.bottom-bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #43689b;
+  color: #fff;
+  height: 20%;
+  width: 100%;
+  font-size: 2rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+}
+.bottom-bar img {
+  margin: 1rem;
+  height: 80%;
+}
+.bottom-bar h6 {
+  margin: 2.5rem 0 0 0;
+}
+.bottom-bar i {
+  margin: 3rem 0;
 }
