--- a/Week-1/Assignment2/styles.css
+++ b/Week-1/Assignment2/styles.css
@@ -12,7 +12,7 @@ navbar {
   background-color: #f0f0f0;
   color: #000;
   width: 2.5rem;
-  height: 75vh;
+  height: 78vh;
   font-size: 2rem;
   display: flex;
   align-items: center;
@@ -35,28 +35,28 @@ nav {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .top-background img {
   height: 70%;
+  margin-left: 7rem;
 }
 
 .chart-info {
   margin-left: 2rem;
 }
 .top-background i {
-  height: 5rem;
-  width: 5rem;
+  margin: 4rem 2rem 0 0;
+  font-size: 1.2rem;
   color: #fff;
 }
 
 table {
   position: absolute;
   top: 40%;
-  left: 10%;
+  left: 5%;
   border-collapse: collapse;
-  width: 100%;
+  width: 95%;
   color: #000;
 }
 
