--- a/Week-2/assignment1/style.css
+++ b/Week-2/assignment1/style.css
@@ -12,7 +12,6 @@
   width: 100%;
   z-index: -1;
   object-fit: cover;
- 
 }
 
 .main {
@@ -148,10 +147,10 @@ input {
 
 .screen-header-button {
   display: inline-block;
-  width: 8px;
-  height: 8px;
+  width: 10px;
+  height: 10px;
   margin-right: 3px;
-  border-radius: 8px;
+  border-radius: 10px;
   background: white;
 }
 
@@ -211,7 +210,7 @@ input {
   position: absolute;
   left: 0;
   bottom: -10px;
-  width: 25px;
+  width: 50px;
   height: 4px;
   background: #ea1d6f;
 }
@@ -306,7 +305,15 @@ input {
   margin: 0 5px;
 }
 
-@media screen and (max-width: 520px) {
+select option {
+  background-color: #666;
+  color: #fff;
+}
+
+@media screen and (max-width: 720px) {
+  .main {
+    width: 100%;
+  }
   .screen-body {
     flex-direction: column;
   }
@@ -320,20 +327,71 @@ input {
   }
 
   .app-title span {
+    font-size: 1.5rem;
     margin-right: 12px;
+    margin-bottom: 2rem;
   }
 
   .app-title:after {
     display: none;
   }
+
+  .para {
+    margin: 10px;
+    padding: 10px;
+    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .para p {
+    margin-top: 1rem;
+  }
+
+  .para2,
+  .para3 {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+  }
+  .para2 img,
+  .para3 img {
+    width: 90vw;
+    margin: 0;
+    margin-bottom: 20px;
+  }
+  .para2 div,
+  .para3 div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+    padding: 10px;
+  }
+
+  #back {
+    height: 100%;
+  }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 850px) {
   .screen-body {
     padding: 40px;
   }
 
   .screen-body-item {
     padding: 0;
+  }
+
+  #back {
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .main {
+    width: 100%;
   }
 }
