--- a/Week-2/assignment2/style.css
+++ b/Week-2/assignment2/style.css
@@ -7,32 +7,61 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
-  /* transition: all 2s; */
+  margin-top: 10rem;
 }
-.box {
-  width: 100px;
-  height: 100px;
+.wrap {
+  top: 10em;
+  left: 10em;
+  width: 20em;
+  height: 20em;
+  background-color: lightgray;
+  color: rgb(79, 0, 79);
+  display: flex;
+  flex-wrap: wrap;
+  z-index: 1;
+}
+h1 {
+  position: relative;
+  z-index: 1;
+  top: -11.5rem;
+  left: 7.5rem;
+}
+.wrap > div {
+  width: 10em;
+  height: 10em;
+  transition: transform 1s linear;
+  transition-duration: 1s;
+  z-index: 2;
 }
 .box1 {
   background-color: #606c38;
-}
-.box1:hover {
-  transition: all 2s;
-  transform: rotate(-80deg);
+  transform-origin: top left;
 }
 .box2 {
   background-color: #dda15e;
+  transform-origin: top right;
 }
 .box3 {
   background-color: #bc6c25;
-  position: relative;
-  top: 100px;
-  left: -200px;
+  transform-origin: bottom left;
 }
 .box4 {
   background-color: #283618;
-  position: relative;
-  top: 100px;
-  left: -200px;
+  transform-origin: bottom right;
+}
+
+.wrap:hover > .box1 {
+  transform: rotate(90deg);
+}
+
+.wrap:hover > .box2 {
+  transform: rotate(-90deg);
+}
+
+.wrap:hover > .box3 {
+  transform: rotate(-90deg);
+}
+
+.wrap:hover > .box4 {
+  transform: rotate(90deg);
 }
