--- a/Week-5/Assignment2/style.css
+++ b/Week-5/Assignment2/style.css
@@ -7,21 +7,8 @@ body {
   justify-content: center;
   align-items: center;
 }
-.log-boolean,
-.log-undefined {
-  color: magenta;
-  font-family: "Fira Code", monospace;
-}
-.log-object,
-.log-string {
-  color: orange;
-  font-family: "Fira Code", monospace;
-}
-.log-number {
-  color: cyan;
-  font-family: "Fira Code", monospace;
-}
 
-h1 {
+h1,
+p {
   color: orangered;
 }
