--- a/Week-10/url-shortner/src/App.css
+++ b/Week-10/url-shortner/src/App.css
@@ -1,38 +1,65 @@
+ul li,
+li {
+  list-style: none;
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+  outline: none;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+p {
+  font-size: 1.2rem;
+  color: #6b6a6a;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Navbar */
+.navbar {
+  width: 90vw;
+  display: flex;
+  padding: 0 4rem;
+  margin-top: 2rem;
+}
+.left-items {
+  width: 40vw;
+  display: flex;
+  justify-content: space-between;
+}
+.left-items li a {
+  padding-right: 1rem;
+  color: #898989;
+  font-size: 1rem;
+  font-weight: 600;
+  text-decoration: none;
+}
+.left-items li img {
+  height: 2.5rem;
+}
+
+.right-items {
+  width: 40vw;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.right-items li {
+  padding-right: 2rem;
+  color: #898989;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.active {
+  color: #fff;
+  background: #2bd0d0;
+  border-radius: 2rem;
+  padding: 0.5rem 2rem;
 }
