styling done for remaining components

--- a/Week-10/url-shortner/src/App.css
+++ b/Week-10/url-shortner/src/App.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 ul li,
 li {
   list-style: none;
@@ -64,7 +69,6 @@ p {
   padding: 0.5rem 2rem;
 }
 
-
 /* Hero */
 .hero {
   display: flex;
@@ -105,4 +109,139 @@ p {
 }
 .hero .right img {
   height: 85vh;
+}
+
+/* Statistics */
+.statistics {
+  padding: 6rem 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.statistics h1 {
+  padding: 0;
+  margin: 0;
+  color: #454545;
+  font-size: 2.4rem;
+}
+.statistics p {
+  width: 40%;
+}
+
+.cards {
+  display: flex;
+  margin-top: 4rem;
+}
+
+.cards .round {
+  background: #382f50;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cards p {
+  width: 80%;
+}
+.card {
+  margin-left: 2rem;
+}
+
+.cards .card2 {
+  margin-top: 3rem;
+}
+
+.cards .card3 {
+  margin-top: 6rem;
+}
+.span1 {
+  background: #2bd0d0;
+  height: 10px;
+  width: 80px;
+  margin-top: 12rem;
+  z-index: -1;
+}
+
+.span2 {
+  background: #2bd0d0;
+  height: 10px;
+  width: 80px;
+  margin-top: 12rem;
+  z-index: -1;
+}
+
+/* Boost */
+
+.boost {
+  margin: 3rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.boost img {
+  z-index: -1;
+  background: #39324e;
+  position: absolute;
+  height: 45%;
+  max-width: 98.8vw;
+  overflow: hidden;
+}
+.boost h1 {
+  color: #fff;
+  font-size: 2.8rem;
+  margin-top: 0;
+}
+.boost button {
+  color: #fff;
+  background-color: #2bd0d0;
+  font-size: 1.6rem;
+  border: none;
+  border-radius: 2rem;
+  padding: 1rem 3rem;
+  font-weight: 600;
+}
+
+/* Footer */
+
+.footer {
+  background: #1f1b29;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 0 4rem 0;
+}
+
+.footer .logo {
+  filter: invert(100%);
+  margin-right: 5rem;
+  align-self: flex-start;
+}
+
+.footer .sections {
+  display: flex;
+  flex-direction: row;
+  align-self: flex-start;
+}
+
+.footer .section {
+  padding: 0 2rem 0 0;
+  line-height: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.footer .socialIcons {
+  width: 15%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.footer ul {
+  margin: 0;
 }
